Add junit bom